js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.9.kt
fun funB() = listOf(fun1(), fun3(), fun2()).joinToString()
